# mira-cell

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: .gitignore  config
configs/: config.yaml
configs/data/: nist.yaml
configs/logger/: mlflow.yaml
configs/model/: resnet18_hint.yaml
configs/optimizer/: adamw_cosine.yaml
configs/trainer/: default.yaml  smoke.yaml
data/: cell_variants.dvc  train.dvc  val.dvc
form_reader_and_evaluator/: constants.py  infer.py  train.py
form_reader_and_evaluator/data/: datamodule.py  hint.py  transforms.py
form_reader_and_evaluator/models/: classifier.py
form_reader_and_evaluator/utils/: download.py  git_meta.py
mira_cell/: export.py  infer.py  train.py
mira_cell/data/: datamodule.py  hint.py  transforms.py
mira_cell/models/: classifier.py
mira_cell/utils/: download.py  git_meta.py
models/: best.ckpt.dvc
scripts/: curate_data.py  query_server.py  setup-dvc-auth.sh
