[project]
name = "form-reader-and-evaluator"
version = "0.1.0"
description = "Letter recognition for handwritten answer-form cells (All-Russian Astronomy Olympiad blitz rounds)."
authors = [{ name = "Alexei Rebrikov", email = "alexei.rebrikov03@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch>=2.2,<2.7",
    "torchvision>=0.17,<0.22",
    "lightning>=2.2,<3.0",
    "hydra-core>=1.3,<2.0",
    "mlflow>=2.12,<3.0",
    "dvc[gdrive]>=3.50,<4.0",
    "fire>=0.6,<1.0",
    "pillow>=10.0",
    "numpy>=1.26,<3.0",
]

[project.scripts]
form-train = "form_reader_and_evaluator.train:cli"
form-infer = "form_reader_and_evaluator.infer:cli"
form-download-data = "form_reader_and_evaluator.utils.download:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["form_reader_and_evaluator"]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
