[project]
name = "mira-cell"
version = "0.1.0"
description = "Mira Cell — handwritten letter recognition for one form cell (All-Russian Astronomy Olympiad blitz rounds)."
authors = [{ name = "Alexei Rebrikov", email = "alexei.rebrikov03@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch>=2.2,<2.7",
    "torchvision>=0.17,<0.22",
    "lightning>=2.2,<3.0",
    "hydra-core>=1.3,<2.0",
    "mlflow>=2.12,<3.0",
    "fire>=0.6,<1.0",
    "pillow>=10.0",
    "numpy>=1.26,<3.0",
    "dvc>=3.67.1",
    "httpx>=0.28.1",
    "onnx>=1.16,<2.0",
    "onnxruntime>=1.18,<2.0",
    "fastapi>=0.108,<0.109",
    "starlette>=0.32,<0.33",
]

[project.scripts]
mira-train = "mira_cell.train:cli"
mira-infer = "mira_cell.infer:cli"
mira-download-data = "mira_cell.utils.download:cli"
mira-export = "mira_cell.export:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mira_cell"]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
